# Ankieta---Metody-i-Techniki---Analiza-Danych

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.cursor/plans/: prd_v2_simplicity_fixes_e27262aa.plan.md
config/: analysis_plan.yml
data/raw/: survey_latest.csv
docs/: PRD.md
docs/archive/: likert_survey_prd+scaffold_1f3ad681.plan.md  prd_v2_simplicity_fixes_e27262aa.plan.md  prereg-safe_prd_revision_cd6626c8.plan.md
scripts/: run_pipeline.py
src/: __init__.py  analysis.py  labels.py  loader.py  outputs.py  schema.py
tests/: __init__.py  test_outputs.py  test_persona_invariance.py  test_schema.py
